--- a/Airbnb_Listing_Data_Challenge.ipynb
+++ b/Airbnb_Listing_Data_Challenge.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "Airbnb_Listing_Data_Challenge.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNb3lNyuMW9T1KwRHQ1w4Ol",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOtMRvhwGNC24Qd4zSkTEAy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Seazone Code Challenge - Data Science\n",
+        "\n",
+        "**Objetivos**\n",
+        "\n",
+        "* Ordenar os bairros em ordem crescente de número de listings.\n",
+        "* Ordenar os bairros em ordem crescente de faturamento médio dos listings.\n",
+        "* Explicar se existem correlações entre as características de um anúncio e seu faturamento e quais são.\n",
+        "* Responder qual a antecedência média das reservas e se esse número é maior ou menor para finais de semana.\n",
+        "* Embasar as análise com gráficos onde for possível.\n",
+        "\n",
+        "\n",
+        "**Características do Data Set**\n",
+        "\n",
+        "desafio_priceav\n",
+        "* Linhas: 354520\n",
+        "* Colunas: 7\n",
+        "* Formato do arquivo: csv\n",
+        "\n",
+        "\n",
+        "desafio_details\n",
+        "* Linhas: 4691\n",
+        "* Colunas: 10\n",
+        "* Formato do arquivo: csv"
+      ],
+      "metadata": {
+        "id": "inJosa0KuU__"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -49,7 +80,7 @@
       "metadata": {
         "id": "hWUKxJBIcMGD"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -63,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b4rSmWLBdnOi",
-        "outputId": "13cff827-9000-4927-a71a-5969d0033c0d"
+        "outputId": "062e1fcd-cf63-467c-fd2e-92703b7bcaa4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +124,7 @@
       "metadata": {
         "id": "7TF9BhYZeK0p"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -104,7 +135,7 @@
       "metadata": {
         "id": "r--t7TPpkNtT"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -116,7 +147,7 @@
       "metadata": {
         "id": "b4CUl_rslkJn"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -130,16 +161,16 @@
           "height": 206
         },
         "id": "ei2D5BAxpDlB",
-        "outputId": "383fb4ea-181f-44c0-92a3-a849da7bdcc6"
+        "outputId": "a4c2a491-7b08-4db8-811f-82c92f6caebb"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-8c419197-d025-4bad-ad6c-0b1b36b7cc09\">\n",
+              "  <div id=\"df-e3f6f762-0f6c-4cb5-9b70-25e0af8d088e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -192,7 +223,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c419197-d025-4bad-ad6c-0b1b36b7cc09')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e3f6f762-0f6c-4cb5-9b70-25e0af8d088e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -243,12 +274,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8c419197-d025-4bad-ad6c-0b1b36b7cc09 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e3f6f762-0f6c-4cb5-9b70-25e0af8d088e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8c419197-d025-4bad-ad6c-0b1b36b7cc09');\n",
+              "          const element = document.querySelector('#df-e3f6f762-0f6c-4cb5-9b70-25e0af8d088e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -291,7 +322,7 @@
       "metadata": {
         "id": "tTcudz6nppMy"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     }
   ]
